--- a/sample.html
+++ b/sample.html
@@ -1,1 +1,6 @@
- <link rel="stylesheet" href="style.css" />
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+     <link rel="stylesheet" href="style.css" />
+  </head>
